--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@ a {
   color: #000;
 }
 
-/* header */
+/* HEADER STYLING */
 
 .header {
   box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, .1);
@@ -119,6 +119,9 @@ a {
   top: 0;
 }
 
+/* END MENU STYLING */
+
+/* MEDIA STYLING */
 /* 48em = 768px */
 
 @media (min-width: 48em) {
@@ -148,3 +151,31 @@ header:not(.header) {
 h1 {
   color: magenta;
 }
+
+
+/* HOME PAGE STYLING */
+.HPcontainerC {
+  display: flex;
+  justify-content: center;
+}
+
+.HPcontainerR,
+.HPcontainerL {
+  display: flex;
+}
+
+/* HOMEPAGE END */
+
+/* ABOUT STYLING */
+
+#aboutContainerCenter {
+  display: flex;
+  justify-content: center;
+}
+
+#aboutContainerContent {
+  display: flex;
+  justify-content: center;
+}
+
+/* END ABOUT STYLING*/
