--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -1,17 +1,16 @@
 * {
-    background-color: magenta;
+  background-color: #f2c438;
 }
 
 /* HOME PAGE  */
 .HPcontainerR,
 .HPcontainerL {
-
-    flex-direction: column;
+  flex-direction: column;
 }
 
 .HPcontainerR img,
 .HPcontainerL img {
-    width: 100%;
+  width: 100%;
 }
 
 /* Case Study  */
@@ -20,15 +19,15 @@
 .CScontainerCrow,
 .CScontainerL,
 .CScontainerR {
-    flex-direction: column;
+  flex-direction: column;
 }
 
 /* ABOUT STYLING */
 
 #aboutContainerCenter,
 #aboutContainerContent {
-    flex-direction: column;
-    align-items: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* END ABOUT STYLING*/
