--- a/styles/style.css
+++ b/styles/style.css
@@ -2,16 +2,18 @@ body {
   margin: 0;
   min-height: 100vh;
   font-family: Helvetica, sans-serif;
+  color: #3d4074;
+  background-color: #f2c438;
 }
 
 a {
-  color: #000;
+  color: #3d4074;
 }
 
 /* HEADER STYLING */
 
 .header {
-  box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, .1);
+  box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.1);
   position: fixed;
   width: 100%;
   z-index: 3;
@@ -50,7 +52,7 @@ a {
 .header .menu {
   clear: both;
   max-height: 0;
-  transition: max-height .2s ease-out;
+  transition: max-height 0.2s ease-out;
 }
 
 /* menu icon */
@@ -69,18 +71,18 @@ a {
   display: block;
   height: 2px;
   position: relative;
-  transition: background .2s ease-out;
+  transition: background 0.2s ease-out;
   width: 18px;
 }
 
 .header .menu-icon .navicon:before,
 .header .menu-icon .navicon:after {
   background: #333;
-  content: '';
+  content: "";
   display: block;
   height: 100%;
   position: absolute;
-  transition: all .2s ease-out;
+  transition: all 0.2s ease-out;
   width: 100%;
 }
 
@@ -98,24 +100,24 @@ a {
   display: none;
 }
 
-.header .menu-btn:checked~.menu {
+.header .menu-btn:checked ~ .menu {
   max-height: 240px;
 }
 
-.header .menu-btn:checked~.menu-icon .navicon {
+.header .menu-btn:checked ~ .menu-icon .navicon {
   background: transparent;
 }
 
-.header .menu-btn:checked~.menu-icon .navicon:before {
+.header .menu-btn:checked ~ .menu-icon .navicon:before {
   transform: rotate(-45deg);
 }
 
-.header .menu-btn:checked~.menu-icon .navicon:after {
+.header .menu-btn:checked ~ .menu-icon .navicon:after {
   transform: rotate(45deg);
 }
 
-.header .menu-btn:checked~.menu-icon:not(.steps) .navicon:before,
-.header .menu-btn:checked~.menu-icon:not(.steps) .navicon:after {
+.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
+.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
   top: 0;
 }
 
@@ -152,7 +154,6 @@ h1 {
   color: magenta;
 }
 
-
 /* HOME PAGE STYLING */
 .HPcontainerC {
   display: flex;
@@ -166,7 +167,6 @@ h1 {
 
 /* HOMEPAGE END */
 /* CASE STUDY / ABOUT ME SECTION */
-
 
 .CScontainerCcol {
   display: flex;
@@ -183,16 +183,6 @@ h1 {
 .CScontainerR {
   display: flex;
 }
-
-
-
-
-
-
-
-
-
-
 
 /* ABOUT STYLING */
 
