--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -43,7 +43,10 @@
 }
 
 #aboutContainerContent {
+    flex-direction: row;
+    align-items: center;
     justify-content: center;
 }
+
 
 /* END ABOUT STYLING*/
