--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,9 @@
-* {
-  background-color: #f2c438
-}
-
 body {
   margin: 0;
   min-height: 100vh;
   font-family: Helvetica, sans-serif;
+  background-color: #f2c438;
+
 }
 
 a {
@@ -62,7 +60,7 @@ a {
 .header .menu-icon {
   cursor: pointer;
   display: inline-block;
-  /* float: right; */
+  float: right;
   padding: 28px 20px;
   position: relative;
   user-select: none;
@@ -152,9 +150,9 @@ header:not(.header) {
   background: blue;
 }
 
-h1 {
+/* h1 {
   color: magenta;
-}
+} */
 
 
 /* HOME PAGE STYLING */
@@ -196,16 +194,35 @@ h1 {
 
 
 
-
-
 /* ABOUT STYLING */
+
+#home {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
 
 #aboutContainerCenter {
   display: flex;
+  color: #A62F03;
+  text-shadow: 1px 1px #2f3659;
 }
 
 #aboutContainerContent {
   display: flex;
 }
+
+#aboutContainerContent,
+p {
+  background-color: #D9910D;
+
+}
+
+#aboutContainerContent img {
+  width: 100%;
+}
+
+
 
 /* END ABOUT STYLING*/
