--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,7 @@ a {
   position: fixed;
   width: 100%;
   z-index: 3;
+
 }
 
 .header ul {
@@ -157,12 +158,17 @@ header:not(.header) {
 /* HOME PAGE STYLING */
 .HPcontainerC {
   display: flex;
-  justify-content: center;
+  flex-direction: row;
+  justify-items: center;
+  width: 30vw;
+  padding: 3vw;
 }
+
 
 .HPcontainerR,
 .HPcontainerL {
   display: flex;
+
 }
 
 /* HOMEPAGE END */
@@ -217,15 +223,18 @@ header:not(.header) {
   padding: 4vw;
   margin: 5vw;
   border-style: double;
-  border-color: #2f3659;
+  border: 1vw double #2f3659;
   border-radius: 25px;
+
 }
 
 #aboutContainerContent img {
   width: 100%;
-  margin-right: 5vw;
-  margin-bottom: 5vh;
+  margin: 0vh 5vh 5vh 0vh;
+  padding: 1vh;
+  border: 2vw double #2f3659;
   border-radius: 25px;
+
 }
 
 
