--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -7,12 +7,9 @@
 .HPcontainerR,
 .HPcontainerL {
     flex-direction: column;
-
+    border-top: 5px solid #f4f4f4;
 }
 
-.plzwork {
-    width: 40vw;
-}
 
 .HPcontainerR {
     align-items: flex-end;
@@ -58,6 +55,11 @@
 .CScontainerCcol {
     flex-direction: column;
     align-items: center;
+    background-color: #d9910d;
+    margin: 2vw;
+    padding: 1vw;
+    border: 1vw solid #2f3659;
+    border: radius 25px;
 }
 
 .CScontainerCrow {
@@ -73,6 +75,10 @@
     flex-direction: column;
 }
 
+.CScontainerCrow img {
+    width: 23vw;
+    padding: 1vw;
+}
 
 /* ABOUT STYLING */
 
