--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -22,6 +22,15 @@ body {
     flex-direction: column;
 }
 
+
+.CScontainerCcol {
+    background-color: #d9910d;
+    margin: 2vw;
+    padding: 1vw;
+    border: 1vw solid #2f3659;
+    border: radius 25px;
+}
+
 /* ABOUT STYLING */
 
 #aboutContainerCenter,
