--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -23,7 +23,7 @@
     padding-left: 4vw;
 }
 
-.imgIntro {
+.imgIntro img {
     position: static;
     top: -15px;
     display: inline-block;
@@ -35,18 +35,30 @@
     padding-right: 0;
     padding-left: 0;
     cursor: help;
+    will-change: transform;
+    transition: transform 250ms;
 }
 
-.beFancy:hover {
+
+/* .imgIntro:hover {
+    background-color: red;
+    animation: shake 0.1s;
+    animation-iteration-count: infinite;
+} */
+
+/* .imgIntro:hover {
+    background-color: magenta;
     opacity: 1;
+    transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
     transform: translate3d(0px, 0px, 0px)scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
-    transform-style: p
+    transform-style: p;} */
+
+.imgIntro {
+    transition: transform .7s ease-in-out;
 }
 
-.beFancy:hover {
-    left: -7 px;
-    margin-left: 0;
-    padding-right: 0;
+.imgIntro:hover {
+    transform: rotate(360deg);
 }
 
 /* CASE STUDY / ABOUT ME SECTION */
@@ -78,21 +90,21 @@
 .CScontainerCcol img {
     width: 40vw;
 
+}
+
+/* ABOUT STYLING */
+
+#aboutContainerCenter {
+    justify-content: center;
+    font-size: x-large;
+    margin-top: 48px;
+}
+
+#aboutContainerContent {
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
 
 
-    /* ABOUT STYLING */
-
-    #aboutContainerCenter {
-        justify-content: center;
-        font-size: x-large;
-        margin-top: 48px;
-    }
-
-    #aboutContainerContent {
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-    }
-
-
-    /* END ABOUT STYLING*/
+/* END ABOUT STYLING*/
