--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -1,44 +1,42 @@
 /* HOME PAGE */
 
 .HPcontainerC {
-    font-size: xx-large;
+  font-size: xx-large;
 }
 
 .HPcontainerR,
 .HPcontainerL {
-    flex-direction: column;
-    border-top: 5px solid #f4f4f4;
+  flex-direction: column;
+  border-top: 5px solid #f4f4f4;
 }
 
-
 .HPcontainerR {
-    align-items: flex-end;
-    width: 100%;
-    padding-right: 5vw;
+  align-items: flex-end;
+  width: 100%;
+  padding-right: 5vw;
 }
 
 .HPcontainerL {
-    align-items: flex-start;
-    width: 40vw;
-    padding-left: 4vw;
+  align-items: flex-start;
+  width: 40vw;
+  padding-left: 4vw;
 }
 
 .imgIntro img {
-    position: static;
-    top: -15px;
-    display: inline-block;
-    width: auto;
-    height: 60px;
-    max-width: none;
-    margin-top: -16px;
-    margin-left: 0;
-    padding-right: 0;
-    padding-left: 0;
-    cursor: help;
-    will-change: transform;
-    transition: transform 250ms;
+  position: static;
+  top: -15px;
+  display: inline-block;
+  width: auto;
+  height: 60px;
+  max-width: none;
+  margin-top: -16px;
+  margin-left: 0;
+  padding-right: 0;
+  padding-left: 0;
+  cursor: help;
+  will-change: transform;
+  transition: transform 250ms;
 }
-
 
 /* .imgIntro:hover {
     background-color: red;
@@ -54,57 +52,55 @@
     transform-style: p;} */
 
 .imgIntro {
-    transition: transform .7s ease-in-out;
+  transition: transform 0.7s ease-in-out;
+  cursor: help;
 }
 
 .imgIntro:hover {
-    transform: rotate(360deg);
+  transform: rotate(360deg);
 }
 
 /* CASE STUDY / ABOUT ME SECTION */
 
-
 .CScontainerCcol {
-    flex-direction: column;
-    align-items: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .CScontainerCrow {
-    flex-direction: row;
-    justify-content: space-around;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
 .CScontainerL {
-    flex-direction: column;
+  flex-direction: column;
 }
 
 .CScontainerR {
-    flex-direction: column;
+  flex-direction: column;
 }
 
 .CScontainerCrow img {
-    width: 23vw;
-    padding: 1vw;
+  width: 23vw;
+  padding: 1vw;
 }
 
 .CScontainerCcol img {
-    width: 40vw;
-
+  width: 40vw;
 }
 
 /* ABOUT STYLING */
 
 #aboutContainerCenter {
-    justify-content: center;
-    font-size: x-large;
-    margin-top: 48px;
+  justify-content: center;
+  font-size: x-large;
+  margin-top: 48px;
 }
 
 #aboutContainerContent {
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
-
 
 /* END ABOUT STYLING*/
