--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,13 @@
+* {
+  font-family: "Cormorant Garamond";
+}
+
 body {
   margin: 0;
   min-height: 100vh;
   font-family: Helvetica, sans-serif;
-  background-color: #2f3659;
+  background-color: #fff0c1;
+  color: #3d4073;
 }
 
 a {
@@ -12,11 +17,10 @@ a {
 /* HEADER STYLING */
 
 .header {
-  box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, .1);
+  box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.1);
   position: fixed;
   width: 100%;
   z-index: 3;
-
 }
 
 .header ul {
@@ -52,7 +56,7 @@ a {
 .header .menu {
   clear: both;
   max-height: 0;
-  transition: max-height .2s ease-out;
+  transition: max-height 0.2s ease-out;
 }
 
 /* menu icon */
@@ -71,18 +75,18 @@ a {
   display: block;
   height: 2px;
   position: relative;
-  transition: background .2s ease-out;
+  transition: background 0.2s ease-out;
   width: 18px;
 }
 
 .header .menu-icon .navicon:before,
 .header .menu-icon .navicon:after {
   background: #333;
-  content: '';
+  content: "";
   display: block;
   height: 100%;
   position: absolute;
-  transition: all .2s ease-out;
+  transition: all 0.2s ease-out;
   width: 100%;
 }
 
@@ -100,24 +104,24 @@ a {
   display: none;
 }
 
-.header .menu-btn:checked~.menu {
+.header .menu-btn:checked ~ .menu {
   max-height: 240px;
 }
 
-.header .menu-btn:checked~.menu-icon .navicon {
+.header .menu-btn:checked ~ .menu-icon .navicon {
   background: transparent;
 }
 
-.header .menu-btn:checked~.menu-icon .navicon:before {
+.header .menu-btn:checked ~ .menu-icon .navicon:before {
   transform: rotate(-45deg);
 }
 
-.header .menu-btn:checked~.menu-icon .navicon:after {
+.header .menu-btn:checked ~ .menu-icon .navicon:after {
   transform: rotate(45deg);
 }
 
-.header .menu-btn:checked~.menu-icon:not(.steps) .navicon:before,
-.header .menu-btn:checked~.menu-icon:not(.steps) .navicon:after {
+.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
+.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
   top: 0;
 }
 
@@ -154,7 +158,6 @@ header:not(.header) {
   color: magenta;
 } */
 
-
 /* HOME PAGE STYLING */
 .HPcontainerC {
   display: flex;
@@ -162,8 +165,8 @@ header:not(.header) {
   justify-items: center;
   padding: 18vw 18vw 9vw 18vw;
   text-align: justify;
+  font-style: italic;
 }
-
 
 .HPbox {
   width: 100%;
@@ -174,10 +177,8 @@ header:not(.header) {
   display: flex;
 }
 
-
 /* HOMEPAGE END */
 /* CASE STUDY / ABOUT ME SECTION */
-
 
 .CScontainerCcol {
   display: flex;
@@ -195,12 +196,10 @@ header:not(.header) {
   display: flex;
 }
 
-
-
 .CSmidIMG img {
-  background-color: #3D4073;
+  background-color: #3d4073;
   border-radius: 25px;
-  border: #3D4073;
+  border: #3d4073;
 }
 
 .CScontainerCcol p {
@@ -213,19 +212,18 @@ header:not(.header) {
 }
 
 .CScontainerCcol img {
-  background-color: #3D4073;
+  background-color: #3d4073;
   margin: 4vw;
   padding: 1vw;
   border: 1vw solid #f2c438;
   border-radius: 25px;
-
 }
 
 .CScontainerCrow p {
   background-color: #f2c438;
   padding: 1vw;
   border-radius: 25px;
-  border: .5vw solid white;
+  border: 0.5vw solid white;
   margin: 4vw;
 }
 
@@ -253,13 +251,12 @@ header:not(.header) {
 }
 
 #aboutContainerContent p {
-  background-color: #D9910D;
+  background-color: #d9910d;
   padding: 4vw;
   margin: 5vw;
   border-style: double;
   border: 1vw double #2f3659;
   border-radius: 25px;
-
 }
 
 #aboutContainerContent img {
@@ -268,10 +265,7 @@ header:not(.header) {
   padding: 1vh;
   border: 2vw double #d9910d;
   border-radius: 25px;
-
 }
-
-
 
 /* END ABOUT STYLING*/
 
