--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -90,4 +90,12 @@
     justify-content: center;
 }
 
+#aboutContainerContent img {
+    width: 100%;
+    margin: 0vh 5vh 5vh 0vh;
+    padding: 1vh;
+    border: 2vw double #A62f03;
+}
+
+
 /* END ABOUT STYLING*/
