--- a/styles/style.css
+++ b/styles/style.css
@@ -26,6 +26,7 @@ a {
   position: fixed;
   width: 100%;
   z-index: 3;
+  background-color: #FFFBED;
 }
 
 .header ul {
@@ -33,7 +34,9 @@ a {
   padding: 0;
   list-style: none;
   overflow: hidden;
-  background-color: #fff;
+  background-color: #3D4073;
+  
+  
 }
 
 .header li a {
@@ -41,7 +44,10 @@ a {
   padding: 20px 20px;
   border-right: 1px solid #f4f4f4;
   text-decoration: none;
+  color: white;
+  font-style: italic;
 }
+
 
 .header li a:hover,
 .header .menu-btn:hover {
@@ -63,6 +69,7 @@ a {
   max-height: 0;
   transition: max-height 0.2s ease-out;
 }
+
 
 
 /* menu icon */
