--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -1,101 +1,113 @@
+.header li a {
+  background-color: #3d4073;
+  border: none;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 6px;
+  border-radius: 20px;
+}
+
 /* HOME PAGE */
 
 .HPcontainerC {
-    font-size: xx-large;
+  font-size: xx-large;
 }
 
 .HPcontainerR,
 .HPcontainerL {
-    flex-direction: column;
-    border-top: 5px solid #f4f4f4;
+  flex-direction: column;
+  border-top: 5px solid #f4f4f4;
 }
 
 .HPcontainerR {
-    align-items: flex-end;
-    padding-right: 5vw;
+  align-items: flex-end;
+  padding-right: 5vw;
 }
 
 .HPcontainerL {
-    align-items: flex-start;
-    width: 40vw;
-    padding-left: 5vw;
+  align-items: flex-start;
+  width: 40vw;
+  padding-left: 5vw;
 }
 
 .imgIntro img {
-    position: static;
-    top: -15px;
-    display: inline-block;
-    width: auto;
-    height: 60px;
-    max-width: none;
-    margin-top: -16px;
-    margin-left: 0;
-    padding-right: 0;
-    padding-left: 0;
-    cursor: help;
-    will-change: transform;
-    transition: transform 250ms;
+  position: static;
+  top: -15px;
+  display: inline-block;
+  width: auto;
+  height: 60px;
+  max-width: none;
+  margin-top: -16px;
+  margin-left: 0;
+  padding-right: 0;
+  padding-left: 0;
+  cursor: help;
+  will-change: transform;
+  transition: transform 250ms;
 }
 
 .imgIntro {
-    transition: transform 0.7s ease-in-out;
-    cursor: help;
+  transition: transform 0.7s ease-in-out;
+  cursor: help;
 }
 
 .imgIntro:hover {
-    transform: rotate(360deg);
+  transform: rotate(360deg);
 }
 
 /* CASE STUDY / ABOUT ME SECTION */
 
 .CScontainerCcol {
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
 .CScontainerCrow {
-    flex-direction: row;
-    justify-content: space-around;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
 .CScontainerL {
-    flex-direction: column;
+  flex-direction: column;
 }
 
 .CScontainerR {
-    flex-direction: column;
+  flex-direction: column;
 }
 
 .CScontainerCrow img {
-    width: 23vw;
-    padding: 1vw;
+  width: 23vw;
+  padding: 1vw;
 }
 
 .CScontainerCcol img {
-    width: 30vw;
+  width: 30vw;
 }
 
 /* ABOUT STYLING */
 
 #aboutContainerCenter {
-    justify-content: center;
-    font-size: x-large;
-    margin-top: 48px;
+  justify-content: center;
+  font-size: x-large;
+  margin-top: 48px;
 }
 
 #aboutContainerContent {
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 #aboutContainerContent img {
-    width: 100%;
-    margin: 0vh 5vh 5vh 0vh;
-    padding: 1vh;
-    border: 2vw double #A62f03;
+  width: 100%;
+  margin: 0vh 5vh 5vh 0vh;
+  padding: 1vh;
+  border: 2vw double #a62f03;
 }
-
 
 /* END ABOUT STYLING*/
