--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -1,17 +1,28 @@
+.header li a {
+  display: flex;
+  padding: 20px 20px;
+  border-right: 1px solid #f4f4f4;
+  text-decoration: none;
+  color: white;
+  font-style: italic;
+
+  background-color: #3d4073;
+}
+
 body {
-    font-family: "Source Sans Pro";
-    background-color: #FFFBED;
+  font-family: "Source Sans Pro";
+  background-color: #fffbed;
 }
 
 /* HOME PAGE  */
 .HPcontainerR,
 .HPcontainerL {
-    flex-direction: column;
+  flex-direction: column;
 }
 
 .HPcontainerR img,
 .HPcontainerL img {
-    width: 100%;
+  width: 100%;
 }
 
 /* Case Study  */
@@ -20,38 +31,32 @@ body {
 .CScontainerCrow,
 .CScontainerL,
 .CScontainerR {
-    flex-direction: column;
+  flex-direction: column;
 }
 
 CScontainerCcol img {
-    width: 100%;
-
+  width: 100%;
 }
-
-
 
 /* ABOUT STYLING */
 
 #aboutContainerCenter,
 #aboutContainerContent {
-    flex-direction: column;
+  flex-direction: column;
 }
 
 #aboutContainerCenter {
-    align-items: center;
+  align-items: center;
 }
 
-
 #aboutContainerContent {
-    align-items: center;
+  align-items: center;
 }
 
 #aboutContainerContent img {
-    width: 100%;
-    margin: 5vh;
-    padding: 2vh;
+  width: 100%;
+  margin: 5vh;
+  padding: 2vh;
 }
-
-
 
 /* END ABOUT STYLING*/
