--- a/styles/style.css
+++ b/styles/style.css
@@ -34,19 +34,19 @@ a {
   padding: 0;
   list-style: none;
   overflow: hidden;
-  background-color: #3D4073;
-  
-  
 }
 
-.header li a {
-  display: block;
+/* .header li a {
+  display: flex;
   padding: 20px 20px;
   border-right: 1px solid #f4f4f4;
   text-decoration: none;
   color: white;
   font-style: italic;
-}
+  border-radius: 25px;
+} */
+
+
 
 
 .header li a:hover,
