--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -126,7 +126,7 @@
     justify-content: center;
     font-size: x-large;
     margin-top: 48px;
-    padding-top: 3vh;
+    padding-top: 3vw;
 }
 
 #aboutContainerContent {
